2233
I can't reproduce this.  Can you give more details about exactly how you're getting that error? I can see from the stack trace that it's not regular scalac, but fsc also works for me:
{code}
[paulp@leaf 2287 (master)]$$ scalac a.scala 
a.scala:5: error: value a is not a member of B
    "" + b.a // `a` is not member of `B`
           ^
one error found
{code}
{code}
[paulp@leaf 2287 (master)]$$ fsc a.scala 
/scala/trac/2287/a.scala:5: error: value a is not a member of B
    "" + b.a // `a` is not member of `B`
           ^
one error found
{code}
